<resources>
    <string name="login_userName">姓名：</string>
    <string name="login_register">注册</string>
    <string name="main_conversation">会话</string>
    <string name="main_contacts">通讯录</string>
    <string name="main_setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="fr_setting">设置</string>
    <string name="fr_contact_invite">好友邀请</string>
    <string name="fr_contact_group">群组</string>
    <string name="act_add_friend">添加朋友</string>
    <string name="act_add_find">查找</string>
    <string name="act_add_name">名称</string>
    <string name="act_add_add">添加</string>
    <string name="invite_massage">邀请信息</string>
    <string name="item_invite_name">名称</string>
    <string name="item_invite_reason">原因</string>
    <string name="contact_delete">删除</string>
    <string name="main_chat">会话</string>
    <string name="hint_input">请输入</string>
    <string name="hint_sel">请选择</string>

    <string name="hint_success_verify">验证码已发送成功，请注意查收</string>
    <!-- 未完善个人资料 -->
    <string name="hint_perfect_personal_info">您的注册信息不全，请尽快完善个人资料。</string>
    <!-- 未加入企业 -->
    <string name="hint_join_company">你还没有企业归属，请创建或加入企业团队！</string>
    <!-- 没有权限  -->
    <string name="hint_authority">你还没有使用此功能权限，请联系企业负责人！</string>
    <!-- 未完善企业  -->
    <string name="hint_perfect_company_info">您的企业团队信息不全，请尽快完善企业资料。</string>
    <!-- 技师端 -->
    <!-- 未通过技师认证  -->
    <string name="hint_master_no_auth">你还没有通过技师认证，请尽快提交认证资料！</string>
    <!-- 待审核  -->
    <string name="hint_wait_check">您的企业信息正在审核中，请耐心等待。</string>
    <!-- 审核拒绝  -->
    <string name="hint_refuse_check">很遗憾，您的企业信息审核没有通过，请修改后重新提交。</string>

    <string name="hint_no_team">暂未创建/加入企业</string>

    <string name="text_new_order">最新订单</string>
    <string name="text_home_alldata">查看全部</string>
    <string name="text_work_tm">天猫安防</string>
    <string name="text_work_jd">京东安防</string>
    <string name="text_work_camera">相机</string>
    <string name="text_work_calculate">计算码率</string>
    <string name="text_work_answer">专家解答</string>
    <string name="text_work_knowledge">行业知识</string>
    <string name="text_work_report">工作汇报</string>
    <string name="text_work_task">布置任务</string>
    <string name="text_work_inspect">设备点检</string>
    <string name="text_work_sign">签到</string>
    <string name="text_work_library">设备库</string>
    <string name="text_work_fault">故障记录</string>
    <string name="text_work_change">变更记录</string>
    <string name="text_work_file">在线文档</string>
    <string name="text_work_talk">面谈员工</string>
    <string name="text_work_transfer">交接班</string>
    <string name="text_opne_shop">开店日志</string>
    <string name="text_defend_log">布防日志</string>

    <string name="text_service_title">1.完善个人资料</string>
    <string name="text_service_join">2.加入/创建企业</string>

    <string name="text_service_join_content">创建部门，添加人员，以及权限角色匹配</string>
    <string name="text_service_join_content_nav">通讯录 >> 创建团队 >> 添加员工 >> 登录后台 >> 员工授权</string>
    <string name="text_service_finish_info">3.完善公司资料</string>
    <string name="text_service_finish_info_nav">通讯录 >> 公司设置 >> 完善资料 >> 提交认证</string>
    <string name="text_service_more">4.使用更多功能</string>
    <string name="text_service_more_content">支持业务合约模式，支持平台广选模式</string>
    <string name="text_service_worker_auth">2.技师资格认证</string>
    <string name="text_service_worker_auth_nav">我的 >> 技师认证  >> 提交认证</string>
    <string name="text_service_worker_auth_content">认证技师，即可享受平台接单</string>
    <string name="text_service_join_company">3.加入安防公司或平台</string>
    <string name="text_service_join_company_nav">安防公司管理员添加你为员工或者联系平台客服加入</string>
    <string name="text_service_open_receive">4.开启接单模式</string>
    <string name="text_service_receive">5.接单</string>
    <string name="text_service_authentication">5.资质认证</string>
    <string name="text_service_open_business">6.开通业务功能</string>

    <string name="text_service_content">完善个人资料，如姓名，地址等相关信息，即可享受享受易安防完整平台服务。</string>
    <string name="text_service_nav">我的 >> 点击头像 >> 完善资料</string>
    <string name="text_service_tel">咨询电话:</string>
    <string name="text_service_telphone">400-890-9280</string>
    <string name="text_data_change">切换</string>

    <!-- 帮助页面 -->
    <string name="text_data_repair_dealy">昨日报修</string>
    <string name="text_data_repair_five">报修前五家单位</string>
    <string name="text_data_install_dealy">昨日报装</string>
    <string name="text_data_install_five">报装前五家单位</string>
    <string name="text_data_design_dealy">昨日设计</string>
    <string name="text_data_design_five">设计前五家单位</string>
    <string name="text_data_devices">设备情况</string>
    <string name="text_data_monitor">监控系统</string>
    <string name="text_data_self">防盗系统</string>
    <string name="text_data_analysis">数据分析</string>
    <string name="text_data_yesterday">昨日</string>
    <string name="text_data_month">本月</string>

    <string name="text_edit_personal_info">编辑个人资料>></string>
    <string name="text_change_personal_head">点击更换头像</string>
    <string name="text_personal_head">头像</string>
    <string name="text_work_talk_one">1.如果还有进步空间，应从哪方面入手？</string>
    <string name="text_work_talk_two">2.所在部门存在的最大问题及原因</string>
    <string name="text_work_talk_three">3.你会如何解决这些问题？</string>
    <string name="text_work_talk_four">4.工作中，不愉快的事情？</string>
    <string name="text_work_talk_five">5.公司中，最优秀的人？最敬佩的人？进步最大的人？</string>
    <string name="text_work_talk_six">6.针对当前工作，哪些方面不尽人意</string>
    <string name="text_work_talk_seven">7.哪些事情，应该做而没有去做？</string>
    <string name="text_work_talk_eight">8.如何才能帮助到你？</string>
    <string name="text_work_talk_nine">9.如何知道你需要帮助？</string>
    <string name="text_work_talk_ten">10.如何能更容易理解我想要表达的意思</string>
    <string name="text_work_talk_eleven">11.你觉得我们错失的最大机遇是什么</string>
    <string name="text_work_talk_input">请输入文字内容</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_worker_detail_see_more_type">查看所有标签</string>

    <string name="text_invite_all_reward_person">%1$s 已获得现金奖励%2$d 元</string>
    <string name="text_invite_person">邀请用户\t\t\t%1$s</string>
    <string name="text_withdraw_person">提现用户\t\t\t%1$s</string>
    <string name="text_invite_money_enter">待入账：  %1$d元</string>
    <string name="text_invite_money_lose">已失效：  %1$d元</string>
    <string name="text_invite_money_withdraw">已提现：  %1$d元</string>
    <string name="text_invite_extra_money">可提现金额：%1$d 元</string>

    <string name="text_active_rule"><Data><![CDATA[<font color="#FF9037"><b>活动时间：</b></font>2019-06-01 至 2019-12-31 <br><br><font color="#FF9037"><b>活动规则：</b></font>用户注册后可以在个人中心页面获得用户推广权限，进行推广（推广链接和推广二维码）
    <br><br><font color="#FF9037"><b>活动奖励：</b></font>通过用户分享的二维码或推广链接注册后，推广关系绑定，推广用户自动获得推广佣金，推广人数越多，佣金越高。佣金=推广人数 x 3元
    <br><br><font color="#FF9037"><b>奖品发放：</b></font>推广佣金通过微信红包形式发放，三个工作日后到账。佣金提现时效为7天，超过7天未提现，佣金将失效。<br><br><font color="#FF9037"><b>补充说明：</b></font>此次活动最终解释权归易安防（易安网(北京）科技有限公司）所有。]]></Data></string>
    <!--最新订单页面-->
    <string name="text_new_order_area">地区：%1$s</string>
    <string name="text_new_order_person">下单人：%1$s</string>
    <string name="text_new_order_start_time">下单时间：%1$s</string>
    <string name="text_new_order_worker">技师：%1$s</string>
    <string name="text_new_order_end_time">计划时间：%1$s</string>
    <string name="text_new_order_type_maintenance">维保类型：%1$s</string>
    <string name="text_new_order_time_remaining">距离截止还剩：%1$d天 %2$d时%3$d分</string>
    <string name="text_new_order_time_reply_end">回复截止时间：%1$s</string>
    <string name="text_new_order_budget_scale">预算规模：%1$s.0\t元/月</string>
    <string name="text_new_order_name_program">项目名称：%1$s</string>
    <string name="text_new_order_tenderee">招标单位：%1$s</string>
    <string name="text_new_order_area1">地域：%1$s</string>
    <string name="text_new_order_time_end_get_file">获取招标文件截止时间：%1$s</string>
    <string name="text_new_order_screen_choose_area">已选%1$d个地区</string>
    <string name="text_content_audit_fail">内容包括"\"%s\""未通过审核</string>

</resources>
