<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_44"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:text="协同办公"
        android:textColor="@color/color_client_neworder"
        android:textSize="@dimen/textSize_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_sign"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_sign"
            android:text="@string/text_work_sign" />

        <TextView
            android:id="@+id/tv_work_report"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_report"
            android:text="@string/text_work_report" />

        <TextView
            android:id="@+id/tv_work_task"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_task"
            android:text="@string/text_work_task" />

        <TextView
            android:id="@+id/tv_work_inspect"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_inspect"
            android:text="@string/text_work_inspect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_transfer"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_transfer"
            android:onClick="noOpen"
            android:text="@string/text_work_transfer" />

        <TextView
            android:id="@+id/tv_work_talk"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_talk"
            android:onClick="noOpen"
            android:text="@string/text_work_talk" />

        <TextView
            android:id="@+id/tv_shop_log"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_talk"
            android:text="@string/text_opne_shop" />

        <TextView
            android:id="@+id/tv_defend_log"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_talk"
            android:text="@string/text_defend_log" />

<!--        <TextView style="@style/style_client_work_meun" />

        <TextView style="@style/style_client_work_meun" />-->

    </LinearLayout>


</LinearLayout>