<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_official"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="协同办公"
        android:textColor="@color/color_client_neworder"
        android:textSize="@dimen/textSize_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_work_report"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_report"
            android:text="@string/text_work_report" />

        <TextView
            android:id="@+id/tv_work_task"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_task"
            android:text="@string/text_work_task" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_40"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_inspect"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_inspect"
            android:text="@string/text_work_inspect" />

        <TextView
            android:id="@+id/tv_work_transfer"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_work_transfer"
            android:text="@string/text_work_transfer" />

        <TextView
            android:id="@+id/tv_work_talk"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_work_talk"
            android:text="@string/text_work_talk" />

    </LinearLayout>


</LinearLayout>