<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_40"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="辅助工具"
        android:layout_marginLeft="@dimen/dimen_30"
        android:textColor="@color/color_client_neworder"
        android:textSize="@dimen/textSize_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_36"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_camera"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_camera"
            android:text="@string/text_work_camera" />

        <TextView
            android:id="@+id/tv_work_calculate"
            style="@style/style_client_work_meun"
            android:onClick="noOpen"
            android:drawableTop="@mipmap/ic_client_work_calculate"
            android:text="@string/text_work_calculate" />

        <TextView
            android:id="@+id/tv_work_answer"
            style="@style/style_client_work_meun"
            android:onClick="noOpen"
            android:drawableTop="@mipmap/ic_client_work_answer"
            android:text="@string/text_work_answer" />

        <TextView
            android:id="@+id/tv_work_knowledge"
            style="@style/style_client_work_meun"
            android:onClick="noOpen"
            android:drawableTop="@mipmap/ic_client_work_knowledge"
            android:text="@string/text_work_knowledge" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_tm"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_tm"
            android:text="@string/text_work_tm" />

        <TextView
            android:id="@+id/tv_work_jd"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_jd"
            android:text="@string/text_work_jd" />

        <TextView
            android:id="@+id/tv_work_create_project"
            style="@style/style_client_work_meun"
            android:onClick="noOpen"
            android:drawableTop="@mipmap/ic_work_five_shop"
            android:text="@string/text_worker_five_shop" />

        <TextView style="@style/style_client_work_meun" />
    </LinearLayout>

</LinearLayout>