<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="net.eanfang.client.ui.fragment.customservice.PersonalServiceFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_36"
        android:layout_marginTop="@dimen/dimen_40"
        android:text="@string/text_service_title"
        android:textSize="@dimen/textSize_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_36"
        android:layout_marginRight="@dimen/dimen_36"
        android:layout_marginTop="@dimen/dimen_28"
        android:text="@string/text_service_content"
        android:textSize="@dimen/textSize_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_36"
        android:layout_marginRight="@dimen/dimen_36"
        android:layout_marginTop="@dimen/dimen_28"
        android:text="@string/text_service_nav"
        android:textSize="@dimen/textSize_13"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_service_one" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_service_two" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_36"
        android:layout_marginTop="@dimen/dimen_40"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_service_tel"
            android:textColor="@color/color_client_neworder"
            android:textSize="@dimen/textSize_15" />

        <TextView
            android:id="@+id/tv_service_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_36"
            android:text="@string/text_service_telphone"
            android:textColor="@color/color_service_tel"
            android:textSize="@dimen/textSize_15" />
    </LinearLayout>
</LinearLayout>
